add thread realisation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyWeather!!!</string>
+    <string name="app_name">!MyWeather!</string>
     <string name="action_settings">Settings</string>
 
     <string name="Feb7date">February 7,2020</string>
